2008-09-03  Mirco Bauer <meebey@meebey.net> 

	* FindGroupChatDialog.cs: Use a new thread when calling FindGroupChat on the
	  protocol manager, as that one might block and never returns which would
	  let the GUI freeze forever. (closes trac ticket #104)
	
	  Set mouse cursor to busy when searching for chats. (closes trac bug
	  #115)
	* Frontend.cs: Support calls from non-GUI threads in ShowException() and
	  ShowError().
	
	  Added overload of ShowError() with Exception as parameter.

2008-09-02  Mirco Bauer <meebey@meebey.net> 

	* AboutDialog.cs: Added credits for British English and French translation.

2008-08-31  Mirco Bauer <meebey@meebey.net> 

	* Frontend-GNOME.mdp: Added po files to MonoDevelop projects.

2008-08-31  Mirco Bauer <meebey@meebey.net> 

	* AboutDialog.cs: Added Juan Miguel Carrero <streinleght@gmail.com> to
	  translator credits.

2008-08-28  Mirco Bauer <meebey@meebey.net> 

	* ColorTools.cs: Set eol-style to native and converted files using dos2unix
	  where needed.

2008-08-28  Mirco Bauer <meebey@meebey.net> 

	* Frontend.cs, MainWindow.cs, ChatView.cs: Implementated tray icon support
	  (requires GTK# >= 2.10). (closes trac bug #55)

2008-08-27  Mirco Bauer <meebey@meebey.net>

	* AboutDialog.cs: Replaced (C) with © (copyright character).
	
	  Added link to smuxi's website. (thanks to George Retsinas for noticing
	  this)

2008-08-27  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs, Preferences/ServerListView.cs, Preferences/ServerView.cs,
	  Preferences/PreferencesDialog.cs, AboutDialog.cs, QuickConnectDialog.cs:
	  Set TransientFor property correctly for all dialogs. (thanks to George
	  Retsinas for reporting this)

2008-08-25  Mirco Bauer <meebey@meebey.net> 

	* Makefile.am, smuxi-frontend-gnome.pc.in: Removed unneeded pkg-config
	  files.

2008-08-25  Mirco Bauer <meebey@meebey.net> 

	* Frontend.cs, EngineManagerDialog.cs, Notebook.cs: Fixed switching between